--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -68,6 +68,7 @@ bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +77,12 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++AxisMappings=(AxisName="Move Forward/Backward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Right/Left",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move Forward/Backward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Right/Left",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Horizontal Rotation",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Vertical Rotation",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
