--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/World.World
 EditorStartupMap=/Game/Maps/World.World
+GameInstanceClass=/Game/Blueprints/QuestSystem/BP_QuestStorageInstance_Test.BP_QuestStorageInstance_Test_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
